--- a/client/css/alert.css
+++ b/client/css/alert.css
@@ -1,142 +1,140 @@
 #alertBox {
-    position: absolute;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    height: 100%;
-    pointer-events: none;
-    /* IE11 */
-    background: none !important;
-    z-index: 5;
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 100%;
+  pointer-events: none;
+  /* IE11 */
+  background: none !important;
+  z-index: 5;
 }
 .alertDiv {
-    transform: translateX(-300px);
-    margin-top: 5px;
-    width: 300px;
-    height: 40px;
-    
-    display: flex;
-    border-radius: 8px;
-    transition: ease .5s;
+  transform: translateX(-300px);
+  margin-top: 5px;
+  width: 300px;
+  height: 40px;
+
+  display: flex;
+  border-radius: 8px;
+  transition: ease 0.5s;
 }
 .alertBar {
-    width: 10px;
-    height: 100%;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-
+  width: 10px;
+  height: 100%;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 .alertIcon {
-    border-radius: 6px;
-    width: 20%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-
+  border-radius: 6px;
+  width: 20%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
 }
 .alertSpan {
-    width: 80%;
-    height: 100%;
-    font-weight: bold;
-    line-height: 40px;
-    text-align: center;
+  width: 80%;
+  height: 100%;
+  font-weight: bold;
+  line-height: 40px;
+  text-align: center;
 }
-.alertDiv.move { 
-    transition: ease .5s;
-    transform: translateX(5px);
+.alertDiv.move {
+  transition: ease 0.5s;
+  transform: translateX(5px);
 }
 /* Types of alerts */
 .alertDiv.error {
-    background-color: rgb(251, 138, 138);
+  background-color: rgb(251, 138, 138);
 }
-.alertBar.error{
-    background: #fc0404;
+.alertBar.error {
+  background: #fc0404;
 }
-.alertIcon.error{
-    color: #cd0606;
-    background-color: #fc6464;
+.alertIcon.error {
+  color: #cd0606;
+  background-color: #fc6464;
 }
-.alertSpan.error{
-    color: #bf4141;
+.alertSpan.error {
+  color: #bf4141;
 }
 .alertDiv.success {
-    background-color: rgb(151, 251, 138);
+  background-color: rgb(151, 251, 138);
 }
-.alertBar.success{
-    background: #04fc04;
+.alertBar.success {
+  background: #04fc04;
 }
-.alertIcon.success{
-    color: #1dcd06;
-    background-color: #71fc64;
+.alertIcon.success {
+  color: #1dcd06;
+  background-color: #71fc64;
 }
-.alertSpan.success{
-    color: #54bf41;
+.alertSpan.success {
+  color: #54bf41;
 }
 .alertDiv.info {
-    background-color: rgb(138, 174, 251);
+  background-color: rgb(138, 174, 251);
 }
-.alertBar.info{
-    background: #0484fc;
+.alertBar.info {
+  background: #0484fc;
 }
-.alertIcon.info{
-    color: #064ccd;
-    background-color: #64abfc;
+.alertIcon.info {
+  color: #064ccd;
+  background-color: #64abfc;
 }
-.alertSpan.info{
-    color: #4182bf;
+.alertSpan.info {
+  color: #4182bf;
 }
 /* Progress bar alert */
 .progress-alert {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    width: 30%;
-    height: 120px;
-    background-color: #121212b9;
-    border: solid 1px white;
-    /* background-color: rgba(0, 0, 0, 0.61); */
-    backdrop-filter: blur(5px);
-    top: -20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: .3s ease;
-    z-index: 3;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 30%;
+  height: 120px;
+  background-color: #121212b9;
+  border: solid 1px white;
+  /* background-color: rgba(0, 0, 0, 0.61); */
+  backdrop-filter: blur(5px);
+  top: -20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.3s ease;
+  z-index: 3;
 }
 .progress-alert.move {
-    top: 20%;
-    transition: .3s ease;
+  top: 20%;
+  transition: 0.3s ease;
 }
 .bar-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background: blue; */
-    width: 100%;
-    height: 70%;
-    position: relative;
-    z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: blue; */
+  width: 100%;
+  height: 70%;
+  position: relative;
+  z-index: 5;
 }
 .info-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 20%;
 }
 .progress-bar {
-    position: relative;
-    width: 10%;
-    height: 50px;
-    border-radius: 30px;
-    transition: .3s ease;
-    background: lime;
+  position: relative;
+  width: 10%;
+  height: 50px;
+  border-radius: 30px;
+  transition: 0.3s ease;
+  background: lime;
 
-    /* border: solid 1px white; */
+  /* border: solid 1px white; */
 }
 /* .progress-bar::before {
     content: '';
