--- a/client/css/lobbies.css
+++ b/client/css/lobbies.css
@@ -1,17 +1,13 @@
-* {
-  padding: 0;
-  margin: 0;
-  font-family: "Robboto", sans-serif;
-}
-body {
+#lobby-selector {
   width: 100vw;
   height: 100vh;
+  position: absolute;
   background-color: #121212;
   color: white;
-  /* TESTS */
   display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
 }
 .lobby-box {
   width: 80%;
@@ -87,6 +83,20 @@ body {
   width: 15px;
   height: 15px;
   background-color: green;
+  border-radius: 50%;
+}
+
+.status.ingame {
+  width: 15px;
+  height: 15px;
+  background-color: yellow;
+  border-radius: 50%;
+}
+
+.status.finished {
+  width: 15px;
+  height: 15px;
+  background-color: red;
   border-radius: 50%;
 }
 
@@ -171,8 +181,10 @@ button {
   font-weight: bold;
   font-size: 17px;
 }
-
 .options {
+  display: none;
+}
+#gameCode {
   display: none;
 }
 
@@ -190,7 +202,7 @@ button {
     display: flex;
     overflow-x: auto;
   }
-  .slider {
+  .options-slider {
     min-width: 733px;
     display: flex;
   }
