Added support for touch devices and made canvas responsive
Previously devices with touch screens were unable to play the game (events only handled mouse), now touch events are also handled. Canvas is now responsive and draws every move that user made on map

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -212,7 +212,7 @@ input[type="number"] {
   user-select: none;
 }
 .game-buttons {
-  width: 100%;
+  width: 700px;
   margin-top: 5px;
   display: flex;
   flex-direction: row;
@@ -424,4 +424,18 @@ input:checked + .slider:before {
 }
 .reset-arrow {
   margin-right: 2%;
+}
+
+@media (max-width: 720px) {
+  .game-buttons {
+    width: 80%;
+  }
+  #change-btn,
+  #hints-btn {
+    width: 120px;
+    height: 35px;
+  }
+  #hints-display {
+    margin-top: 3px;
+  }
 }
