--- a/client/css/index.css
+++ b/client/css/index.css
@@ -271,77 +271,49 @@ input:checked + .slider:before {
 }
 /* End screen styles */
 .end-screen {
-  position: fixed;
-  top: 0;
   width: 100vw;
   height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
   backdrop-filter: blur(0px);
-  pointer-events: none;
-  z-index: 2;
-}
-.end-screen.move {
-  backdrop-filter: blur(40px);
-  pointer-events: initial;
-  transition: backdrop-filter 2s;
-}
-#result,
-#winner-points,
-#loser-points {
-  display: flex;
-  justify-content: center;
-  font-size: 50px;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: bold;
-}
-.end-info {
-  width: 100%;
-  min-width: 1500px;
-  height: 100%;
-  transition: 0.2s;
-  display: flex;
-  justify-content: center;
+  z-index: 999;
+  display: none;
   align-items: center;
   flex-direction: column;
+  transition: backdrop-filter 2s;
+}
+.end-screen.move {
+  display: flex;
+  backdrop-filter: blur(40px);
+  transition: backdrop-filter 2s;
 }
 .winner-info,
 .loser-info {
-  position: absolute;
+  width: 50%;
+  height: 50%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-  width: 400px;
-  height: 400px;
-  transform: translateX(1500px);
-  /* background: green; */
-  transition: 0.5s;
 }
-.winner-info.move-middle {
-  transform: translateX(0%);
-}
-.winner-info.move-top {
-  transform: translate(-500px, -100px);
-}
-#winner-name,
-#loser-name {
+.end-info {
+  width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: center;
-  text-align: center;
-  font-size: 2em;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: lighter;
-  letter-spacing: 10px;
-}
-#loser-info.move-middle {
-  transform: translateX(0px);
-}
-#loser-info.move-top {
-  transform: translate(500px, -100px);
+  align-items: center;
+  justify-content: space-evenly;
+  overflow: hidden;
 }
 .canvas-box {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+canvas {
+  min-width: 200px;
+  min-height: 200px;
+  display: block;
 }
 .arrow-btn {
   margin-right: 15px;
@@ -351,12 +323,7 @@ input:checked + .slider:before {
   color: white;
   cursor: pointer;
 }
-#winner-increase,
-#winner-reduce,
-#loser-increase,
-#loser-reduce {
-  /* display: none; */
-}
+
 @keyframes leftArrow {
   0% {
     margin-right: 15px;
@@ -426,6 +393,36 @@ input:checked + .slider:before {
   margin-right: 2%;
 }
 
+#winner-name,
+#loser-name {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 2em;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: lighter;
+  letter-spacing: 10px;
+}
+
+.loser-info,
+.winner-info {
+  transform: translateX(1500px);
+}
+
+.loser-info.move-middle {
+  transform: translateX(-25vw);
+}
+
+.winner-info.move-middle {
+  transform: translateX(25vw);
+}
+
+.loser-info.move-top,
+.winner-info.move-top {
+  transform: translateX(0px);
+}
+
 @media (max-width: 720px) {
   .game-buttons {
     width: 80%;
@@ -437,5 +434,27 @@ input:checked + .slider:before {
   }
   #hints-display {
     margin-top: 3px;
+  }
+  .end-info {
+    flex-direction: column;
+  }
+  .loser-info,
+  .winner-info {
+    transform: translateX(900px);
+  }
+
+  .loser-info.move-middle {
+    transform: translateX(0px);
+    transform: translateY(-24vh);
+  }
+
+  .winner-info.move-middle {
+    transform: translateX(0px);
+    transform: translateY(25vh);
+  }
+
+  .loser-info.move-top,
+  .winner-info.move-top {
+    transform: translateX(0px);
   }
 }
