Fixed lobby view, lobby option validation
Lobby view wasn't responsive, but it has been fixed. Lobby option previously were not validated, now user cannot provide letters and special character and thus crash server

--- a/client/css/alert.css
+++ b/client/css/alert.css
@@ -148,3 +148,9 @@
     /* background: linear-gradient(90deg, blue, green);
     background: green;
 } */
+
+@media (max-width: 720px) {
+  .progress-alert {
+    width: 70%;
+  }
+}
